public/css/style.css
/* Reset */

body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,dfn,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}



html,body{
	margin:0;
	padding:0;
	font-family: 'Lato', sans-serif;
	background: #fff;
	background-size: cover;
	height: 100%;
	/*width: 100%;*/
}


#wrapper{
	width: 100%;
	/*width: 940px;*/
	margin: 0 auto;
}

.main{
	/*width: 100%;*/
	/*width: 940px;*/
	float: left;
}

.header, .content, .bottom, .sep2{
	/*width: 100%;*/
	/*float: left;*/
}



.header{
	/*margin-top: 160px;
	margin-bottom: 40px;*/
}


h1{
	font-family: 'Open Sans', sans-serif;
	color: #0c0c0c;
	text-align: center;
	font-size: 50px;
	font-weight: 300;
	margin: 0 0 10px 0;
}


h1 strong{
	font-size: 38px;
	font-weight: 700;
}

h2{
	text-align: center;
	font-weight: 300;
	font-size: 20px;
	color: #0c0c0c;

}

h2 strong{
	font-weight: 700;
	font-style: italic;
}


.information{
	/*width: 480px;*/
	padding-top: 35px;
	margin: 0 auto;
}

h3{
	font-size: 28px;
	font-weight: 600;
	color: #ffffff;
}

.information p{
	font-size: 16px;
	color: #ffffff;
	display: block;
}

.form{
	/*width: 100%;*/
	margin:0 0;
}

.field{
	width: 80%;
	margin: 0 5%;
	-webkit-border-radius: 30px;-moz-border-radius: 30px;border-radius: 30px;
	border: 1px #ccc solid;
	font-style: italic;
	font-family: 'Lato', sans-serif;
	font-size: 14px;
	font-weight: light;
	color: #ffffff;
	float: left;
	padding: 15px;
}

@media only screen and (max-device-width: 420px)  {
	.information{
		/*width: 100%;*/
	}
	.form{
		/*width: 100%;*/
	} 

	.field {
		/*padding-left: 5%;
		padding-right: 5%;*/
	}
}

.submit{
	padding: 6px 12px;
	-webkit-border-radius: 30px;-moz-border-radius: 30px;border-radius: 30px;
	margin-left: -82px;
	margin-top: 12px;
	background: #eeeeee;
	border: none;
	float: left;
	font-family: 'Lato', sans-serif;
	font-size: 14px;
	cursor: pointer;
}


.submit:hover{
	background: #106EE8;
}

.error {
	color: #FE7070;
	font-weight: 700;
	font-size: 25px;
}

a {
	color: #92BCF2;
	font-weight: 700;
}

a:visited,
a:hover {
	color: #7EB6FF;
}

